@@ -1,6 +1,6 @@
 SPRING FRAMEWORK CHANGELOG
 ==========================
-$Id: changelog.txt,v 1.168 2004-06-23 11:31:39 jhoeller Exp $
+$Id: changelog.txt,v 1.169 2004-06-23 15:46:51 aarendsen Exp $
 
 
 Changes in version 1.1 RC1 (11.7.2004)
@@ -83,6 +83,7 @@ Package org.springframework.scheduling
 * added "jobSchedulingDataLocation" property to SchedulerFactoryBean, supporting Quartz 1.3's job definition XML files
 * added "dataSource" property to SchedulerFactoryBean, for using a Spring-managed DataSource as Quartz job store
 * added "overwriteExistingJobs" property to SchedulerFactoryBean, to control overwriting of persistent jobs
+* added "concurrent" property to MethodInvokingJobDetailFactoryBean to support Stateful jobs if needed
 
 Package org.springframework.transaction
 * added "PROPAGATION_NESTED" to TransactionDefinition, for specifying a nested transacton
